--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node",
-    "test": "jest"
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && npx jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +17,15 @@
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "jest": "^28.1.1",
     "supertest": "^6.2.3"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   }
 }
